# kicad2print

./: .editorconfig  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LEARNING.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SECURITY.md  default_config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
docs/: ELECTROLYSIS.md  MCP_KICAD_TOOLS.md
examples/ps2-serial-mouse-adapter/: ps2-serial-mouse-adapter.stl
presets/: copper-wire.toml  electrolysis.toml
scripts/: record-guide-demo.py
src/: autoscale.rs  config.rs  main.rs  mcp.rs  pcb.rs  render.rs
src/export/: assembly.rs  html.rs  mod.rs  stl.rs  threemf.rs
src/geometry/: mod.rs
src/parser/: kicad.rs  mod.rs  pcb_edit.rs  sexp.rs
